--- a/DM2025-Lab1-Homework.ipynb
+++ b/DM2025-Lab1-Homework.ipynb
@@ -5,11 +5,11 @@
    "metadata": {},
    "source": [
     "### Student Information\n",
-    "Name:\n",
+    "Name: 林逸翔\n",
     "\n",
-    "Student ID:\n",
+    "Student ID: D14330001\n",
     "\n",
-    "GitHub ID:"
+    "GitHub ID: shiunglin1017"
    ]
   },
   {
@@ -104,9 +104,40 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\User\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers\\punkt.zip.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Environment setup success!\n"
+     ]
+    }
+   ],
    "source": [
-    "### Begin Assignment Here"
+    "### Begin Assignment Here\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import nltk\n",
+    "nltk.download('punkt')\n",
+    "from sklearn.datasets import fetch_20newsgroups\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "import plotly as py\n",
+    "import PAMI\n",
+    "import umap\n",
+    "\n",
+    "categories = ['alt.atheism', 'soc.religion.christian', 'comp.graphics', 'sci.med']\n",
+    "twenty_train = fetch_20newsgroups(subset='train', categories=categories,\n",
+    "                                  shuffle=True, random_state=42)\n",
+    "print(\"✅ Environment setup success!\")\n"
    ]
   },
   {
@@ -118,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +159,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
